--- a/manuscript/02-methods.Rmd
+++ b/manuscript/02-methods.Rmd
@@ -11,20 +11,30 @@
   T1-weighted structural images were used for alignment of all scans into a common space. T1-weighted images were acquired using a 3D-encoded magnetization-prepared, rapid-acquisition gradient echo (MPRAGE) T1-weighted sequence with the following settings: $T_R$ = 1810 ms; $T_E$ = 3.51 ms; FoV = 180 × 240 mm; matrix size = 192 x 256; number of slices = 160; slice thickness = 1 mm; inter-slice gap = 0 mm; resolution =  0.9375 × 0.9375 × 1 mm. Cerebral blood flow (CBF) was estimated from a pseudo-continuous arterial spin labeling (pcASL) sequence with a spin-echo echoplanar readout and the following settings: $T_R$ = 4000 ms; $T_E$ = 15 ms; FoV = 220 × 220 mm; matrix size = 96 x 96; number of slices = 20; slice thickness = 5 mm; inter-slice gap = 1 mm; resolution = 2.3 x 2.3 x 6 mm; 80 volumes. Maps of amplitude of low frequency fluctuations (ALFF) and regional homogeneity (ReHo) were estimated from six minutes of task-free functional data from a blood-oxygen-level-dependent (BOLD) weighted 2D EPI sequence with the following settings: $T_R$ = 3000 ms; $T_E$ = 32 ms; FoV = 192 × 192 mm; matrix size = 64 x 64; number of slices = 46; slice thickness = 3 mm; inter-slice gap = 0 mm; resolution = 3 mm isotropic; 124 volumes. Subjects were instructed to stay awake, keep their eyes open, fixate on a displayed fixation cross, and remain still.
 
 ## Image processing 
-  Image processing of T1-weighted structural images, pcASL scans, and rfMRI scans have been previously described [@gurStructuralFunctionalBrain2020; @ballerDevelopmentalCouplingCerebral2021]. They are summarized here in brief. T1-weighted structural images were processed using tools from Advanced Normalization Tools (ANTs) [@tustisonLargescaleEvaluationANTs2014]. pcASL and rfMRI scans were processed using an eXtensible Connectivity Pipeline (XCP) which included tools from FSL and AFNI [@ciricMitigatingHeadMotion2018; @jenkinson2012fsl; @cox1996afni].
+  Image processing of T1-weighted structural images, pcASL scans, and rfMRI scans have been previously described [@gurStructuralFunctionalBrain2020; @ballerDevelopmentalCouplingCerebral2022]. They are summarized here in brief. T1-weighted structural images were processed using tools from Advanced Normalization Tools (ANTs) [@tustisonLargescaleEvaluationANTs2014]. pcASL and rfMRI scans were processed using an eXtensible Connectivity Pipeline (XCP) which included tools from FSL and AFNI [@ciricMitigatingHeadMotion2018; @jenkinson2012fsl; @cox1996afni].
 
-  CBF was quantified from control-label pairs using the following equation:
+**CBF was quantified from control-label pairs using ASLtbx as previously described in @satterthwaiteImpactPubertyEvolution2014 [@wangEmpiricalOptimizationASL2008]. Briefly, this quantification involved measuring the differences in signal between control and label acquisitions and then using a set of acquisition and subject-specific parameters to calculate the CBF estimate.** Partial volume correction was performed **on these CBF images** using Bayesian Inference for Arterial Spin Labeling MRI (BASIL) [@chappell_partial_2011; @chappell_variational_2009].
+<!---  CBF was quantified **as previously described in @satterthwaiteImpactPubertyEvolution2014. Briefly, this calculation involved** control-label pairs using the following equation:
   
-  $f = \frac{\Delta M \lambda R e^{\omega R}}{2 M_0 \alpha(1-e^{- \tau R})}$,
+
+  $$f = \frac{\Delta M \theta R e^{\omega R}}{2 M_0 \alpha(1-e^{- \tau R})}$$
   
-where f is CBF, $\Delta M$ is the difference in signal between control and label acquisitions, $R$ is the longitudinal relaxation rate of blood, $\tau$ is the labeling time, $\omega$ is the post-labeling delay, $\alpha$ is the labeling efficiency, $\lambda$ is the blood-tissue-water partition coefficient, and $M_0$ is approximated by the control image intensity. We set $\alpha = 0.85$, $\lambda = 0.9g/mL$, $\tau = 1.6s$, $\omega = 1.2s$. Partial volume correction was performed using Bayesian Inference for Arterial Spin Labeling MRI (BASIL) [@chappell_partial_2011; @chappell_variational_2009].
-  
+where f is CBF, $\Delta M$ is the difference in signal between control and label acquisitions, $R$ is the longitudinal relaxation rate of blood, $\tau$ is the labeling time, $\omega$ is the post-labeling delay, $\alpha$ is the labeling efficiency, $\theta$ is the blood-tissue-water partition coefficient, and $M_0$ is approximated by the control image intensity. **As in Satterthwaite et al., $R$ was set according to methods developed by Wu et al., since the longitudinal relaxation rate is known to change with age and sex [@wuVivoVenousBlood2010]. Other parameters were set as follows:** $\alpha = 0.85$, $\theta = 0.9g/mL$, $\tau = 1.6s$, and $\omega = 1.2s$ **according to previous literature [@daiContinuousFlowdrivenInversion2008; @herscovitchWhatCorrectValue1985; @satterthwaiteImpactPubertyEvolution2014].** Partial volume correction was performed using Bayesian Inference for Arterial Spin Labeling MRI (BASIL) [@chappell_partial_2011; @chappell_variational_2009].--->
+
   For rfMRI processing, the XCP pipeline included: 1) field inhomogeneity correction with FSL FUGUE, 2) removal of initial rfMRI volumes, 3) alignment of volumes within the time series to a selected reference volume using FSL MCFLIRT, 4) interpolation of intensity outliers with AFNI 3dDespike, and 5) demeaning and removal of linear or quadratic trends. Images were then denoised using a 36-parameter confound regression model that has been shown to minimize impact of motion artifact [@ciricBenchmarkingParticipantlevelConfound2017]. Finally, BOLD-weighted time series as well as artifactual model time series were filtered using a first-order Butterworth filter with a passband between 0.01 and 0.08 Hertz. 
   
   Voxel-wise ALFF was defined as the sum of frequency bins between 0.01 and 0.08 Hertz using a Fourier transform of the time-domain signal [@yangAmplitudeLowFrequency2007]. Voxel-wise ReHo was defined as Kendall's coefficient of concordance computed over the rfMRI time series in each voxel's 26-voxel local neighborhood [@zangRegionalHomogeneityApproach2004]. Voxel-wise maps were smoothed with a 6mm full width at half maximum (FWHM) kernel to improve signal-to-noise ratio. CBF, ALFF, and ReHo images were co-registered to the T1-weighted structural image using boundary-based registration and then normalized to a custom adolescent template using the top-performing SyN registration provided by ANTs [@avantsReproducibleEvaluationANTs2011; @ciricTemplateFlowFAIRsharingMultiscale2021; @greveAccurateRobustBrain2009]. Finally, a gray matter mask was generated as the intersection between a gray matter mask from T1-weighted images with 90% coverage over all subjects and overall coverage masks from registered pcASL and rfMRI scans.
 
 ## Methodology for estimating pIMCo 
-  For each subject, we calculated voxel-wise coupling between CBF, ALFF, and ReHo images to produce one pIMCo image per subject. The full pIMCo estimation pipeline is summarized in Figure \@ref(fig:workflow). First, we applied the gray matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1. This scaling is necessary because eigendecomposition is later performed on local covariance matrices; if modalities are defined on drastically different scales, decomposition outputs would reflect differences in scale between modalities rather than local covariance structures. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel -- in our study, we used FWHM = 3, which corresponds to 7x7x7 voxel (14x14x14 mm) local neighborhoods and a standard deviation of 1.62 mm for the Gaussian kernel. Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on it, and extracted the proportion of variance explained by the first eigenvalue. Once all the voxel-wise proportional first eigenvalues were extracted, we scaled these values such that their theoretical range was [0, 1] and performed a logit transformation. While such a transformation makes the coupling value more challenging to interpret, it emphasizes extreme values of coupling and changes the domain of coupling values from $[\frac{1}{m}, 1]$ to $(-\infty, \infty)$, where $m$ is the total number of modalities, in order to improve expected behavior with post-hoc voxel-wise statistical analyses. This resulted in our voxel-level pIMCo image for that subject. For any voxel in that image, a large value suggests that the voxel's local covariance matrix across modalities could be well-summarized in a single dimension while a small value suggests multiple dimensions would be necessary to characterize the covariance structure.
+  For each subject, we calculated voxel-wise coupling between CBF, ALFF, and ReHo images to produce one pIMCo image per subject. The full pIMCo estimation pipeline is summarized in Figure \@ref(fig:workflow). **On average, pIMCo estimation for one subject took approximately 5 minutes.**
+  
+  First, we applied the gray matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1 **across all voxels in the gray matter mask**. This scaling is necessary because eigendecomposition is later performed on local covariance matrices; if modalities are defined on drastically different scales, decomposition outputs would reflect differences in scale between modalities rather than local covariance structures. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel -- in our study, we used FWHM = 3, which corresponds to 7x7x7 voxel (14x14x14 mm) local neighborhoods and a standard deviation of 1.62 mm for the Gaussian kernel, **as prior WLR-based IMCo studies have found this FWHM to be informative [@valcarcelMIMoSAAutomatedMethod2018]. We also show that the FWHM can be varied parametrically in the Supplementary Materials; however, with even a small increase in FWHM to 5, which corresponds to 11x11x11 voxel neighborhoods, pIMCo estimation for one subject took approximately 12 minutes.** 
+  
+  Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on it **using the eigen() function in R**, and extracted the proportion of variance explained by the first/**largest** eigenvalue. 
+  
+  Finally, once all the voxel-wise proportional first eigenvalues were extracted, we **linearly shifted and** scaled these values such that their theoretical range was [0, 1] and performed a logit transformation. While **this monotonic** transformation makes the coupling value more challenging to interpret, it **appropriately** emphasizes extreme values of coupling and changes the domain of coupling values from **the bounded domain** $[\frac{1}{m}, 1]$ to **an unbounded domain** $(-\infty, \infty)$, where $m$ is the total number of modalities. **The transformation results in a coupling value that more closely follows a normal distribution and is thus expected to have improved behavior with post-hoc statistical analyses (Supplementary Figure \@ref(fig:transform)).**
+  
+  This resulted in our voxel-level pIMCo image for that subject. For any voxel in that image, a large value suggests that the voxel's local covariance matrix across modalities could be well-summarized in a single dimension while a small value suggests multiple dimensions would be necessary to characterize the covariance structure. 
   
   For reference, in the three-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 41%, 67%, and 92% of the total variance in that local neighborhood, respectively. In the two-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 56%, 75%, and 94% of the total variance in that local neighborhood, respectively.
 
@@ -40,7 +50,7 @@ knitr::include_graphics("figures/Workflow-02-01.png")
 ## Spin testing 
  To visualize the extent of voxels where coupling was associated with age and sex, we counted the proportion of voxels with statistically significant age or sex effects in each of the Yeo 7 functional networks on the cortex as well as in subcortical regions in the Automated Anatomical Labeling (AAL) atlas [@thomasyeoOrganizationHumanCerebral2011; @tzourio-mazoyerAutomatedAnatomicalLabeling2002].
  
-  Next, we tested whether the proportion of significant voxels in each functional network was enriched when compared to the proportion of significant voxels overall. Because there is an underlying spatial distribution of significant voxels, we used the spin test [@alexander-bloch_testing_2018]. Briefly, the spin test is a permutation-inspired testing procedure that rotates the FreeSurfer sphere randomly to create an underlying null distribution that preserves spatial patterns. The null hypothesis is that there is no spatial enrichment of significant p-values in the specified functional network compared to across the cortex overall. In our study, we estimated the null distribution over 2,000 permutations -- for each permutation, we recorded the Jaccard similarity index between the thresholded p-value map and each of the Yeo 7 networks. Finally, for each network, we calculated the p-value as the proportion of null Jaccard similarity indices equal to or greater than the observed Jaccard similarity index.
+  Next, we tested whether the proportion of significant voxels in each functional network was enriched when compared to the proportion of significant voxels overall. Because there is an underlying spatial distribution of significant voxels, we used the spin test [@alexander-bloch_testing_2018]. Briefly, the spin test is a permutation-inspired testing procedure that rotates the FreeSurfer sphere randomly to create an underlying null distribution that preserves spatial patterns. The null hypothesis is that there is no spatial enrichment of **the proportion of significant voxels** in the specified functional network compared to across the cortex overall. In our study, we estimated the null distribution over 2,000 permutations -- for each permutation, we recorded the Jaccard similarity index between the thresholded p-value map and each of the Yeo 7 networks. Finally, for each network, we calculated the p-value as the proportion of null Jaccard similarity indices equal to or greater than the observed Jaccard similarity index.
 
 ## Code and data availability 
   An R package for calculating pIMCo images is available at: https://github.com/hufengling/pIMCo. All code for analysis is available at: https://github.com/hufengling/IMCo_analyses. Software and packages used for pre-processing, pIMCo calculation, or analysis are cited in the references -- @R-base; @stringr; @R-bookdown; @R-knitr; @R-rmarkdown; @bookdown2016; @tidyverse; @extrantsr; @antsr; @antsrcore; @here; @fischl2012freesurfer; @fsformats; @jenkinson2012fsl; @muschelli2015fslr; @rlist; @neurobase; @py06nimg.
