--- a/manuscript/03-results.Rmd
+++ b/manuscript/03-results.Rmd
@@ -11,7 +11,6 @@
 knitr::include_graphics("figures/coupling_desc-01.png")
 ```
   
-  
 ```{r barplot, fig.cap = "Proportion of voxels in AAL subcortical regions and Yeo 7 cortical networks that showed significant coupling-age and coupling-sex associations when in-scanner motion was included as a covariate (FDR corrected p < 0.05). Spin test was performed for all Yeo 7 networks; significant p-values are reported (p < 0.05)."}
 knitr::include_graphics("figures/joint_barplots_norace.png")
 ```
@@ -20,6 +19,8 @@ knitr::include_graphics("figures/joint_barplots_norace.png")
   Linear associations between strength of coupling and age were present in subcortical structures and cortical networks (Figure \@ref(fig:barplot); corrected p < 0.05). Figure \@ref(fig:ageexample) shows an example of such an association between coupling and age as well as individual modalities and age at one voxel in the default network. In subcortical structures, age-related changes in CBF-ALFF-ReHo coupling occurred primarily in the caudate and pallidum, though such changes were also common in the hippocampus, putamen, and thalamus.
   
   In cortical networks, coupling and age associations were rare in all networks except the frontoparietal and default networks (Figure \@ref(fig:binary)). These two networks were also the networks in which the average strength of coupling across subjects appeared to be highest (Figure \@ref(fig:desc)). Spin testing between functional networks and age-related changes in coupling showed enrichment of coupling and age associations in the frontoparietal (p = 0.013) and default networks (p = 0.039).
+  
+  **Similar patterns were observed when FWHM was varied to either 2mm or 5mm instead of 3mm (Supplementary Figures \@ref(fig:fwhm2) and \@ref(fig:fwhm5)). Of interest, the overall proportions of voxels showing significant coupling-age associations was highest at FWHM of 5, intermediate at FWHM of 3, and lowest at FWHM of 2. This trend suggests that using a larger FWHM may result in coupling values that are more sensitive to group differences as pIMCo estimation is smoothed over a larger local neighborhood, though a trade-off with spatial specificity and computational resources must be considered.**
   
 ```{r ageexample, fig.cap = "Example of associations between individual modalities and age as well as associations between coupling and age at a single voxel in the default network. Each point represents the value at that voxel for one subject. Best-fit lines from univariate linear regression are shown."}
 knitr::include_graphics("figures/modality_by_age.png")
@@ -30,13 +31,27 @@ knitr::include_graphics("figures/coupling_binary-01.png")
 ```
 
 ## CBF-ALFF-ReHo coupling varies between males and females, primarily in subcortical regions 
-  Associations between CBF-ALFF-ReHo coupling and sex were present primarily in the hippocampus and thalamus (Figure \@ref(fig:barplot); corrected p < 0.05). Sex differences in coupling were rare in other subcortical structures and all functional networks -- only 1% to 3% of voxels in these regions showed coupling and sex associations (Figure \@ref(fig:binary)). Spin testing between functional networks and sex-related changes in coupling revealed enrichment of coupling and sex associations in the frontoparietal network (p = 0.012), despite the small proportion of the frontoparietal network that exhibited coupling associations with sex.
+  Associations between CBF-ALFF-ReHo coupling and sex were present primarily in the hippocampus and thalamus (Figure \@ref(fig:barplot); corrected p < 0.05). Sex differences in coupling were rare in other subcortical structures and all functional networks -- only 1% to 3% of voxels in these regions showed coupling and sex associations (Figure \@ref(fig:binary)). Spin testing between functional networks and sex-related changes in coupling revealed enrichment of coupling and sex associations in the frontoparietal network (p = 0.012), despite the small proportion of the frontoparietal network that exhibited coupling associations with sex. **Again, similar results were observed when the FWHM parameter was varied (Supplementary Figures \@ref(fig:fwhm2) and \@ref(fig:fwhm5)).**
 
 ## pIMCo provides a consistent estimator of local coupling compared to WLR-based IMCo
-   In 2016, Vandekar et al. introduced a method to study IMCo relationships at the single voxel level based on local weighted linear regression (WLR) slopes [@vandekarSubjectlevelMeasurementLocal2016]. Because this method relies on estimating WLR slopes between modalities, it is inherently limited to the two-modality setting, cannot account for statistical relationship between modalities, and requires specification of one modality as the independent variable, leading to asymmetry. These limitations are demonstrated by a two-modality example in Figure \@ref(fig:wlrpca). We see that, if ALFF is defined as the independent variable, the WLR coupling value is 0.25, indicating little coupling, but if CBF is defined as the independent variable, the WLR coupling value is 1.25, indicating five times as much coupling. Thus, when using WLR-based IMCo, two possible coupling values exist at every voxel, and there are no guarantees that analyses will show comparable findings between the two. Additionally, these WLR coupling values only describe the trend of the relationship between ALFF and CBF, but do not account for the statistical strength of that relationship.
+   In 2016, Vandekar et al. introduced a method to study IMCo relationships at the single voxel level based on local weighted linear regression (WLR) slopes [@vandekarSubjectlevelMeasurementLocal2016]. Because this method relies on estimating WLR slopes between modalities, it is inherently limited to the two-modality setting, cannot account for statistical relationship between modalities, and requires specification of one modality as the independent variable, leading to asymmetry. These limitations are demonstrated by a two-modality example in Figure \@ref(fig:wlrpca). **This figure was generated by choosing a random voxel with high coupling, as estimated by pIMCo, from a random subject and then calculating the WLR-based IMCo value with ALFF as the independent variable (WLR-ALFF), the WLR-based IMCo value with CBF as the independent variable (WLR-CBF), and the pIMCo coupling value.**
+   
+   We see that the **WLR-ALFF** coupling value is 0.25, indicating little coupling, but the **WLR-CBF** coupling value is 1.25, indicating five times as much coupling. Thus, when using WLR-based IMCo, two possible coupling values exist at every voxel, and there are no guarantees that analyses will show comparable findings between the two. Additionally, these WLR coupling values only describe the trend of the relationship between ALFF and CBF, but do not account for the statistical strength of that relationship.
    
    In contrast, the pIMCo coupling value is 2.13 and does not require specification of which modality is treated as the independent variable, leading to a symmetric and consistent definition of coupling. This pIMCo value does not describe the effect size of the relationship between ALFF and CBF and instead describes the strength and shape of the relationship -- a high value of coupling suggests that the shape of data from that neighborhood looks like a long ellipsoid, while a low value of coupling suggests that the shape is more spherical.
    
 ```{r wlrpca, fig.cap = "Two-modality example showing pIMCo results in comparison to WLR-based IMCo results. Blue line represents coupling value from WLR-based IMCo if ALFF is defined as the independent variable (slope = 0.25). Orange line represents coupling value from WLR-based IMCo if CBF is defined as the independent variable (slope = 1.25). Black line and ellipse represent PCA results; no reference specification is needed (coupling value = 2.13). Larger dot sizes correspond to increased weights in the WLR and weighted PCA."}
 knitr::include_graphics("figures/wlrpca.png")
+```
+
+  **We then repeated this comparison for 100 randomly sampled voxels across 50 randomly sampled subjects for a total of 5,000 voxels. Again, for each voxel, we computed the WLR-ALFF value, the WLR-CBF value, and the pIMCo coupling value. Figure \@ref(fig:simulation) shows the results of this random sampling comparison.**
+  
+  **Panel A shows a strong inverse relationship between the WLR-ALFF and WLR-CBF values such that, if the WLR-ALFF value is very close to 0, suggesting no coupling, the WLR-CBF value is unstable and is either very small or very large; the vice versa is also true. Panel B shows that when the pIMCo value is small, the WLR-ALFF value is also small; however, when the pIMCo value is large, the WLR-ALFF value can be small, large, or close to zero, suggesting either strong coupling or no coupling. Thus, Panel B shows that pIMCo and WLR-ALFF estimates can lead to seemingly contradictory results. Coloring the points by their respective WLR-CBF magnitudes reveals that this contradiction is due to the inverse relationship shown in Panel A -- voxels with large pIMCo values and zero WLR-ALFF values have large WLR-CBF magnitudes. Similar trends can be observed when plotting pIMCo values against WLR-ALFF magnitudes and WLR-CBF magnitudes (Supplementary Figure \@ref(fig:suppimcoimco)).**
+  
+  **In Panel C, we plot pIMCo values against the maximum magnitude of the WLR-ALFF and WLR-CBF values at each voxel and see strong correlation between the two. Voxels with large maximum WLR magnitudes can be interpreted as voxels that either WLR-ALFF or WLR-CBF identifies as having strong coupling. This is further supported by Panel D, which displays pairwise Kendall correlations for pIMCo values, WLR-ALFF values, and maximum WLR magnitudes and shows pIMCo values and maximum WLR magnitudes are highly correlated.**
+  
+  **Overall, these results illustrate the asymmetry of WLR-based IMCo estimates in the two-modality setting and show that apparent contradictions between pIMCo and WLR-based IMCo estimates are resolved when the asymmetry of WLR-based IMCo is taken into account. Thus, pIMCo provides a more consistent estimate of local coupling than WLR-based IMCo even in the two-modality setting.**
+
+```{r simulation, fig.cap = "Comparison between pIMCo coupling values and WLR-based IMCo coupling values across 5,000 randomly sampled voxels. A) Relationship between WLR-ALFF and WLR-CBF coupling values showing a strong inverse relationship with instability when WLR-ALFF approaches 0 and when WLR-CBF approaches 0. B) Relationship between pIMCo and WLR-ALFF coupling values. Color of points corresponds to the magnitude of the WLR-CBF coupling value, with lighter color indicating higher magnitude. C) Relationship between pIMCo and maximum WLR magnitude showing strong correlation. D) Pairwise non-parametric Kendall correlations between pIMCo values, WLR-ALFF values, and maximum WLR magnitudes showing the pIMCo and maximum WLR magnitude have the strongest pairwise correlation."}
+knitr::include_graphics("figures/main_pimco_imco.png")
 ```
