--- a/manuscript/04-discussion.Rmd
+++ b/manuscript/04-discussion.Rmd
@@ -1,14 +1,18 @@
 # Discussion 
-  As growing emphasis is placed on the acquisition of multi-modal data, new methodologies are necessary to enable these analyses. In this manuscript, we introduce pIMCo, a generalized approach to estimating local IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric (Figure \@ref(fig:wlrpca)). Our method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied our proposed method to show significant coupling between cerebral blood flow, resting state fluctuations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
+  As growing emphasis is placed on the acquisition of multi-modal data, new methodologies are necessary to enable these analyses. In this manuscript, we introduce pIMCo, a generalized approach to estimating local IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric (Figure \@ref(fig:wlrpca)). **We show that pIMCo not only allows for coupling analyses in more than two modalities, but also is superior to WLR-based IMCo in the two-modality setting.** Our method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied our proposed method to show significant coupling between cerebral blood flow, resting state fluctuations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
 
 ## Coupling of cerebral blood flow, resting state fluctuations, and local connectivity vary with age and sex 
+  **Neurovascular coupling measured by CBF and ALFF has been previously thought of as a measure of the process by which neuronal activity induces changes in local vasculature to support nutrient demands [@armsteadCerebralBloodFlow2016; @presaVasculoNeuronalCouplingNeurovascular2020]. This neurovascular coupling has been shown to evolve over neurodevelopment as well as in disease [@ballerDevelopmentalCouplingCerebral2022; @girouardNeurovascularCouplingNormal2006; @huDisturbedNeurovascularCoupling2019; @jinDisturbedNeurovascularCoupling2020]. Here, we extend this concept of neurovascular coupling and use CBF-ALFF-ReHo coupling to explore not only the relationship between neuronal activity and blood flow, but also how this relationship is attenuated or enhanced by the additional consideration of the degree of local neuronal activity coordination. Thus, regions with strong CBF-ALFF-ReHo coupling can be thought of as highly-optimized systems, where neuronal activity at a voxel induces, or is induced by, additional neuronal activity within its local network, and together influence local changes in blood flow.**
+  
   We found that CBF-ALFF-ReHo coupling was spatially heterogeneous and varied with age and sex in neurodevelopment in both subcortical structures and functional networks. These findings, which uncover otherwise undetectable intermodal interactions, are unique to those from individual modality analyses.
   
   We noticed that regions with higher CBF-ALFF-ReHo coupling across subjects also tended to have higher variance in coupling. This suggests that these regions may be biologically interesting in the context of CBF-ALFF-ReHo coupling and important regions for future exploration, since they appear to demonstrate pronounced differences in coupling phenotypes between subjects and could be associated with other variables of interest, such as clinical phenotypes.
 
-  Spin testing showed that the high proportion of coupling-age associations in the frontoparietal and default networks were enriched when compared to the cortex overall. This suggests that in neurodevelopment, there is change in not only blood flow, resting state fluctuations, and local connectivity individually, but also in the strength of interaction among these features. These findings are consistent with and fortify the literature demonstrating the importance of frontoparietal and default networks as regions for change in neurodevelopment [@fairMaturingArchitectureBrain2008; @chaiEvolutionBrainNetwork2017; @linDevelopmentFrontoparietalConnectivity2019; @ballerDevelopmentalCouplingCerebral2021]. Outside of neurodevelopment, our findings are consistent with previous work showing that coupling between CBF and functional connectivity strength is stronger in frontoparietal and default networks than regions outside these networks [@takAssociationsRestingStateFMRI2015]. In subcortical structures, high proportions of coupling associations with age seen in the caudate, pallidum, hippocampus, and thalamus suggest that modulation of vascular, resting state fluctuations, and local connectivity coupling may be necessary in the development of movement, memory, and fundamental brain activities. 
+  Spin testing showed that the high proportion of coupling-age associations in the frontoparietal and default networks were enriched when compared to the cortex overall. This suggests that in neurodevelopment, there is change in not only blood flow, resting state fluctuations, and local connectivity individually, but also in the strength of interaction among these features. These findings are consistent with and fortify the literature demonstrating the importance of frontoparietal and default networks as regions for change in neurodevelopment [@fairMaturingArchitectureBrain2008; @chaiEvolutionBrainNetwork2017; @linDevelopmentFrontoparietalConnectivity2019; @ballerDevelopmentalCouplingCerebral2022]. Outside of neurodevelopment, our findings are consistent with previous work showing that coupling between CBF and functional connectivity strength is stronger in frontoparietal and default networks than regions outside these networks [@takAssociationsRestingStateFMRI2015]. In subcortical structures, high proportions of coupling associations with age seen in the caudate, pallidum, hippocampus, and thalamus suggest that modulation of vascular, resting state fluctuations, and local connectivity coupling may be necessary in the development of movement, memory, and fundamental brain activities.
   
-  High proportions of coupling associations with sex in the hippocampus and thalamus suggest that male-female differences in memory and related cognitive functions between males and females could be explained in part by the strength of regional brain metabolism as measured by cerebral blood flow, resting state fluctuations, and local connectivity coupling. In the cortex, the rarity of coupling-sex associations suggests that this coupling may not play a role in explaining cortical sex-based differences or that this relationship is more complex than our analyses could uncover. These cortical findings are of interest when compared to previous work showing a high proportion of the cortex had significant associations between sex and CBF-ALFF coupling [@ballerDevelopmentalCouplingCerebral2021]. Together, these studies demonstrate that three-modality coupling identifies unique relationships when compared to two-modality coupling.
+  **In adolescent neurodevelopment, in response to hormonal changes and environmental exposures, myelinogenesis remains active, regional neurocircuitry is strengthened, and brain plasticity is supported by neuronal proliferation, rewiring, and dendritic pruning [@arainMaturationAdolescentBrain2013; @baumDevelopmentStructureFunction2020; @gieddBrainDevelopmentChildhood1999; @yurgelun-toddEmotionalCognitiveChanges2007]. Additionally, cerebral blood flow has been shown to decrease rapidly in early adolescence [@satterthwaiteImpactPubertyEvolution2014]. Together, these age-related microstructural changes facilitate more efficient inter-neuron communication in terms of both nutrient demand and local network efficiency, thus changing the overall coupling between blood flow, neuronal activity and local connectivity [@bercuryDynamicsMechanismsCNS2015].** 
+  
+  High proportions of coupling associations with sex in the hippocampus and thalamus suggest that male-female differences in memory and related cognitive functions between males and females could be explained in part by the strength of regional brain metabolism as measured by cerebral blood flow, resting state fluctuations, and local connectivity coupling. In the cortex, the rarity of coupling-sex associations suggests that this coupling may not play a role in explaining cortical sex-based differences or that this relationship is more complex than our analyses could uncover. These cortical findings are of interest when compared to previous work showing a high proportion of the cortex had significant associations between sex and CBF-ALFF coupling [@ballerDevelopmentalCouplingCerebral2022]. Together, these studies demonstrate that three-modality coupling identifies unique relationships when compared to two-modality coupling.
   
   Notably, despite low coupling-sex signal in the frontoparietal network, spin testing showed enrichment of coupling associations with sex in this network. Since spin testing is a spatial permutation test that uses the coupling-sex association thresholded p-value map to generate data under the null, this significant finding is likely due to a combination of overall rare coupling-sex associations in the cortex and the spatial distribution of these associations within the frontoparietal network. This finding highlights potential shortcomings of using the spin test for enrichment analysis. Additionally, statistical analysis of enrichment in subcortical structures is not yet possible, so more methods development is needed in this area.
 
@@ -25,7 +29,7 @@
   pIMCo offers a novel perspective for summarizing the overall covariance structure between more than two modalities as well as a generalized, symmetric approach for describing coupling in the two-modality setting. Here, we applied this method to the analysis of coupling between cerebral blood flow, resting state fluctuations, and local connectivity images. This analysis revealed patterns in neurodevelopment with respect to age and sex that differed from those present in any individual modality. As multi-modal data becomes more common, we hope that pIMCo will serve as a tool for capturing complex intermodal relationships and enable more sophisticated descriptive analyses, improved prediction efforts, and novel methodological advances, among others.
   
 # Acknowledgements {-}
-  This study was supported by grants from the National Institute of Mental Health (R01MH112847 to TDS and RTS; R01MH120482 and R01MH113550 to TDS; R01 MH123550-01 to RTS; R01MH107235 to RCG; 2T32MH019112-29A1 to EBB; R01MH120174, R01MH119185, and R56AG066656 to DRR). FH was supported by NIH Medical Scientist Training Program T32 GM07170. SMW was supported by the National Science Foundation Graduate Research Fellowship Program (NSF GRFP). The PNC data used was funded by NIMH RC2 grants (MH089983 and MH089924 to REG). Funding sources were not involved in study design, data analysis, manuscript preparation, or submission decisions.
+  This study was supported by grants from the National Institute of Mental Health (R01MH112847 to TDS and RTS; R01MH120482 and R01MH113550 to TDS; R01 MH123550 to RTS; R01MH107235 to RCG; 2T32MH019112-29A1 to EBB; R01MH120174, R01MH119185, and R56AG066656 to DRR). FH was supported by NIH Medical Scientist Training Program T32 GM07170. SMW was supported by the National Science Foundation Graduate Research Fellowship Program (NSF GRFP). The PNC data used was funded by NIMH RC2 grants (MH089983 and MH089924 to REG). Funding sources were not involved in study design, data analysis, manuscript preparation, or submission decisions.
   
 # Disclosures and declaration of interest {-}
 RTS receives consulting income from Octave Bioscience and compensation for reviewership duties from the American Medical Association. The authors report no conflicts of interest.
