--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -272,7 +272,7 @@
 	number = {3},
 	urldate = {2020-08-11},
 	journal = {Journal of Neurophysiology},
-	author = {Thomas Yeo, B. T. and Krienen, Fenna M. and Sepulcre, Jorge and Sabuncu, Mert R. and Lashkari, Danial and Hollinshead, Marisa and Roffman, Joshua L. and Smoller, Jordan W. and Zöllei, Lilla and Polimeni, Jonathan R. and Fischl, Bruce and Liu, Hesheng and Buckner, Randy L.},
+	author = {Yeo, B. T. and Krienen, Fenna M. and Sepulcre, Jorge and Sabuncu, Mert R. and Lashkari, Danial and Hollinshead, Marisa and Roffman, Joshua L. and Smoller, Jordan W. and Zöllei, Lilla and Polimeni, Jonathan R. and Fischl, Bruce and Liu, Hesheng and Buckner, Randy L.},
 	month = sep,
 	year = {2011},
 	pmid = {21653723},
@@ -723,4 +723,235 @@ Type: article},
   abstract = {To support brain development during youth, the brain must balance energy delivery and consumption. Previous studies in adults have demonstrated high coupling between cerebral blood flow and brain function as measured using functional neuroimaging, but how this relationship evolves over adolescence is unknown. To address this gap, we studied a sample of 831 children and adolescents (478 females, ages 8-22) from the Philadelphia Neurodevelopmental Cohort who were scanned at 3T with both arterial spin labeled (ASL) MRI and resting-state functional MRI (fMRI). Local coupling between cerebral blood flow (CBF, from ASL) and the amplitude of low frequency fluctuations (ALFF, from fMRI) was first quantified using locally weighted regressions on the cortical surface. We then used generalized additive models to evaluate how CBF-ALFF coupling was associated with age, sex, and executive function. Enrichment of effects within canonical functional networks was evaluated using spin-based permutation tests. Our analyses revealed tight CBF-ALFF coupling across the brain. Whole-brain CBF-ALFF coupling decreased with age, largely driven by coupling decreases in the inferior frontal cortex, precuneus, visual cortex, and temporoparietal cortex (pfdr {$<$}0.05). Females had stronger coupling in the frontoparietal network than males (pfdr {$<$}0.05). Better executive function was associated with decreased coupling in the somatomotor network (pfdr {$<$}0.05). Overall, we found that CBF-ALFF coupling evolves in development, differs by sex, and is associated with individual differences in executive function. Future studies will investigate relationships between maturational changes in CBF-ALFF coupling and the presence of psychiatric symptoms in youth. SIGNIFICANCE The functions of the human brain are metabolically expensive and reliant on coupling between cerebral blood flow and neural activity. Previous neuroimaging studies in adults demonstrate tight physiology-function coupling, but how this coupling evolves over development is unknown. Here, we examine the relationship between blood flow as measured by arterial spin labeling and the amplitude of low frequency fluctuations from resting-state magnetic resonance imaging across a large sample of youth. We demonstrate regionally specific changes in coupling over age and show that variations in coupling are related to biological sex and executive function. Our results highlight the importance of CBF-ALFF coupling throughout development; we discuss its potential as a future target for the study of neuropsychiatric diseases.},
   langid = {english},
   file = {/Users/hufengling/Zotero/storage/9PVL8VQ7/Baller et al. - 2021 - Developmental coupling of cerebral blood flow and .pdf;/Users/hufengling/Zotero/storage/NWIPUYKI/2021.07.28.html},
+}
+@Article{armsteadCerebralBloodFlow2016,
+  title = {Cerebral {{Blood Flow Autoregulation}} and {{Dysautoregulation}}},
+  author = {William M. Armstead},
+  date = {2016-09},
+  journaltitle = {Anesthesiology clinics},
+  shortjournal = {Anesthesiol Clin},
+  volume = {34},
+  number = {3},
+  eprint = {27521192},
+  eprinttype = {pmid},
+  pages = {465--477},
+  issn = {1932-2275},
+  doi = {10.1016/j.anclin.2016.04.002},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4988341/},
+  urldate = {2022-04-18},
+  abstract = {The aim of this article is to provide an up-to-date review of the state-of-the-art in cerebral autoregulation, particularly as it may relate to the clinician scientist whose expertise is in the area of neuroscience in anesthesia and critical care. Topics covered range from biological mechanisms, methods used for assessment of autoregulation, effects of anesthetics, role in control of cerebral hemodynamics in health and disease such as traumatic brain injury where dysregulation is evident, and emerging areas such as role of age and sex in contribution to dysautoregulation. Emphasis will be placed on bidirectional translational research wherein the clinical informs the study design of basic science studies, which in turn, informs the clinical to result in development of improved therapies for treatment of CNS pathology.},
+  pmcid = {PMC4988341},
+  file = {/Users/hufengling/Zotero/storage/N3J2F2YD/Armstead - 2016 - Cerebral Blood Flow Autoregulation and Dysautoregu.pdf},
+}
+
+@Article{ballerDevelopmentalCouplingCerebral2022,
+  title = {Developmental Coupling of Cerebral Blood Flow and {{fMRI}} Fluctuations in Youth},
+  author = {Erica B. Baller and Alessandra M. Valcarcel and Azeez Adebimpe and Aaron Alexander-Bloch and Zaixu Cui and Ruben C. Gur and Raquel E. Gur and Bart L. Larsen and Kristin A. Linn and Carly M. O{\textquoteright}NADonnell and Adam R. Pines and Armin Raznahan and David.R. Roalf and Valerie J. Sydnor and Tinashe M. Tapera and M. Dylan Tisdall and Simon Vandekar and Cedric H. Xia and John A. Detre and Russell T. Shinohara and Theodore D. Satterthwait},
+  date = {2022-03},
+  journaltitle = {Cell Reports},
+  shortjournal = {Cell Reports},
+  volume = {38},
+  number = {13},
+  pages = {110576},
+  issn = {22111247},
+  doi = {10.1016/j.celrep.2022.110576},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S2211124722003205},
+  urldate = {2022-04-08},
+  abstract = {The functions of the human brain are metabolically expensive and reliant on coupling between cerebral blood flow (CBF) and neural activity, yet how this coupling evolves over development remains unexplored. Here, we examine the relationship between CBF, measured by arterial spin labeling, and the amplitude of low-frequency fluctuations (ALFF) from resting-state magnetic resonance imaging across a sample of 831 children (478 females, aged 8–22 years) from the Philadelphia Neurodevelopmental Cohort. We first use locally weighted regressions on the cortical surface to quantify CBF-ALFF coupling. We relate coupling to age, sex, and executive functioning with generalized additive models and assess network enrichment via spin testing. We demonstrate regionally specific changes in coupling over age and show that variations in coupling are related to biological sex and executive function. Our results highlight the importance of CBFALFF coupling throughout development; we discuss its potential as a future target for the study of neuropsychiatric diseases.},
+  langid = {english},
+  keywords = {adolescence,amplitude of low-frequency fluctuations,cerebral blood flow,CP: Neuroscience,development,executive function,frontoparietal,neurovascular coupling,sex differences},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/KBR6CCQ8/Baller et al. - 2022 - Developmental coupling of cerebral blood flow and .pdf;/Users/hufengling/Zotero/storage/RB64XCGU/Baller et al. - 2022 - Developmental coupling of cerebral blood flow and .pdf;/Users/hufengling/Zotero/storage/WI9EVAM9/S2211-1247(22)00320-5.html},
+}
+
+@Article{presaVasculoNeuronalCouplingNeurovascular2020,
+  title = {Vasculo-{{Neuronal Coupling}} and {{Neurovascular Coupling}} at the {{Neurovascular Unit}}: {{Impact}} of {{Hypertension}}},
+  shorttitle = {Vasculo-{{Neuronal Coupling}} and {{Neurovascular Coupling}} at the {{Neurovascular Unit}}},
+  author = {Jessica L. Presa and Flavia Saravia and Zsolt Bagi and Jessica A. Filosa},
+  date = {2020-09-25},
+  journaltitle = {Frontiers in Physiology},
+  shortjournal = {Front Physiol},
+  volume = {11},
+  eprint = {33101063},
+  eprinttype = {pmid},
+  pages = {584135},
+  issn = {1664-042X},
+  doi = {10.3389/fphys.2020.584135},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7546852/},
+  urldate = {2022-04-18},
+  abstract = {Components of the neurovascular unit (NVU) establish dynamic crosstalk that regulates cerebral blood flow and maintain brain homeostasis. Here, we describe accumulating evidence for cellular elements of the NVU contributing to critical physiological processes such as cerebral autoregulation, neurovascular coupling, and vasculo-neuronal coupling. We discuss how alterations in the cellular mechanisms governing NVU homeostasis can lead to pathological changes in which vascular endothelial and smooth muscle cell, pericyte and astrocyte function may play a key role. Because hypertension is a modifiable risk factor for stroke and accelerated cognitive decline in aging, we focus on hypertension-associated changes on cerebral arteriole function and structure, and the molecular mechanisms through which these may contribute to cognitive decline. We gather recent emerging evidence concerning cognitive loss in hypertension and the link with vascular dementia and Alzheimer’s disease. Collectively, we summarize how vascular dysfunction, chronic hypoperfusion, oxidative stress, and inflammatory processes can uncouple communication at the NVU impairing cerebral perfusion and contributing to neurodegeneration.},
+  pmcid = {PMC7546852},
+  file = {/Users/hufengling/Zotero/storage/D2GAJ5TZ/Presa et al. - 2020 - Vasculo-Neuronal Coupling and Neurovascular Coupli.pdf},
+}
+@Article{huDisturbedNeurovascularCoupling2019,
+  title = {Disturbed Neurovascular Coupling in Type 2 Diabetes Mellitus Patients: {{Evidence}} from a Comprehensive {{fMRI}} Analysis},
+  shorttitle = {Disturbed Neurovascular Coupling in Type 2 Diabetes Mellitus Patients},
+  author = {Bo Hu and Lin-Feng Yan and Qian Sun and Ying Yu and Jin Zhang and Yu-Jie Dai and Yang Yang and Yu-Chuan Hu and Hai-Yan Nan and Xin Zhang and Chun-Ni Heng and Jun-Feng Hou and Qing-Quan Liu and Chang-Hua Shao and Fei Li and Kai-Xiang Zhou and Hang Guo and Guang-Bin Cui and Wen Wang},
+  date = {2019-03-27},
+  journaltitle = {NeuroImage : Clinical},
+  shortjournal = {Neuroimage Clin},
+  volume = {22},
+  eprint = {30991623},
+  eprinttype = {pmid},
+  pages = {101802},
+  issn = {2213-1582},
+  doi = {10.1016/j.nicl.2019.101802},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6447740/},
+  urldate = {2022-04-18},
+  abstract = {•               Multi-modal MRI is a method to reflect neurovascular coupling condition.                                         •               Neurovascular coupling dysfunction was found in diabetics.                                         •               The memory, executive function and emotion were disrupted in diabetics.                                         •               The limbic system, basal ganglia, and prefrontal lobe was damaged in diabetics.},
+  pmcid = {PMC6447740},
+}
+
+@Article{jinDisturbedNeurovascularCoupling2020,
+  title = {Disturbed Neurovascular Coupling in Hemodialysis Patients},
+  author = {Mei Jin and Liyan Wang and Hao Wang and Xue Han and Zongli Diao and Wang Guo and Zhenghan Yang and Heyu Ding and Zheng Wang and Peng Zhang and Pengfei Zhao and Han Lv and Wenhu Liu and Zhenchang Wang},
+  date = {2020-04-15},
+  journaltitle = {PeerJ},
+  shortjournal = {PeerJ},
+  volume = {8},
+  eprint = {32328355},
+  eprinttype = {pmid},
+  pages = {e8989},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.8989},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7166048/},
+  urldate = {2022-04-18},
+  abstract = {Background Altered cerebral blood flow (CBF) and amplitude of low-frequency fluctuation (ALFF) have been reported in hemodialysis patients. However, neurovascular coupling impairments, which provide a novel insight into the human brain, have not been reported in hemodialysis patients. Methods We combined arterial spin labeling (ASL) and blood oxygen level dependent (BOLD) techniques to investigate neurovascular coupling alterations and its relationships with demographic and clinical data in 46 hemodialysis patients and 47 healthy controls. To explore regional neuronal activity, ALFF was obtained from resting-state functional MRI. To measure cerebral vascular response, CBF was calculated from ASL. The across-voxel CBF–ALFF correlations for global neurovascular coupling and CBF/ALFF ratio for regional neurovascular coupling were compared between hemodialysis patients and healthy controls. Two-sample t-tests were used to compare the intergroup differences in CBF and ALFF. Multiple comparisons were corrected using a voxel-wise false discovery rate (FDR) method (P {$<$} 0.05). Results All hemodialysis patients and healthy controls showed significant across-voxel correlations between CBF and ALFF. Hemodialysis patients showed a significantly reduced global CBF–ALFF coupling (P = 0.0011) compared to healthy controls at the voxel-level. Of note, decreased CBF/ALFF ratio was exclusively located in the bilateral amygdala involved in emotional regulation and cognitive processing in hemodialysis patients. In hemodialysis patients, the decreased CBF (right olfactory cortex, anterior cingulate gyrus and bilateral insula) and ALFF (bilateral precuneus and superior frontal gyrus) were mainly located in the default mode network and salience network-related regions as well as increased CBF in the bilateral thalamus. Conclusions These novel findings reveal that disrupted neurovascular coupling may be a potential neural mechanism in hemodialysis patients.},
+  pmcid = {PMC7166048},
+}
+@Article{girouardNeurovascularCouplingNormal2006,
+  title = {Neurovascular Coupling in the Normal Brain and in Hypertension, Stroke, and {{Alzheimer}} Disease},
+  author = {Helene Girouard and Costantino Iadecola},
+  date = {2006-01},
+  journaltitle = {Journal of Applied Physiology},
+  volume = {100},
+  number = {1},
+  pages = {328--335},
+  publisher = {{American Physiological Society}},
+  issn = {8750-7587},
+  doi = {10.1152/japplphysiol.00966.2005},
+  url = {https://journals.physiology.org/doi/full/10.1152/japplphysiol.00966.2005},
+  urldate = {2022-04-18},
+  abstract = {The brain is critically dependent on a continuous supply of blood to function. Therefore, the cerebral vasculature is endowed with neurovascular control mechanisms that assure that the blood supply of the brain is commensurate to the energy needs of its cellular constituents. The regulation of cerebral blood flow (CBF) during brain activity involves the coordinated interaction of neurons, glia, and vascular cells. Thus, whereas neurons and glia generate the signals initiating the vasodilation, endothelial cells, pericytes, and smooth muscle cells act in concert to transduce these signals into carefully orchestrated vascular changes that lead to CBF increases focused to the activated area and temporally linked to the period of activation. Neurovascular coupling is disrupted in pathological conditions, such as hypertension, Alzheimer disease, and ischemic stroke. Consequently, CBF is no longer matched to the metabolic requirements of the tissue. This cerebrovascular dysregulation is mediated in large part by the deleterious action of reactive oxygen species on cerebral blood vessels. A major source of cerebral vascular radicals in models of hypertension and Alzheimer disease is the enzyme NADPH oxidase. These findings, collectively, highlight the importance of neurovascular coupling to the health of the normal brain and suggest a therapeutic target for improving brain function in pathologies associated with cerebrovascular dysfunction.},
+  keywords = {astrocytes,cerebral blood flow,free radicals,NADPH oxidase},
+  file = {/Users/hufengling/Zotero/storage/2NSGHDJE/Girouard and Iadecola - 2006 - Neurovascular coupling in the normal brain and in .pdf},
+}
+@Article{arainMaturationAdolescentBrain2013,
+  title = {Maturation of the Adolescent Brain},
+  author = {Mariam Arain and Maliha Haque and Lina Johal and Puja Mathur and Wynand Nel and Afsha Rais and Ranbir Sandhu and Sushil Sharma},
+  date = {2013},
+  journaltitle = {Neuropsychiatric Disease and Treatment},
+  shortjournal = {Neuropsychiatr Dis Treat},
+  volume = {9},
+  eprint = {23579318},
+  eprinttype = {pmid},
+  pages = {449--461},
+  issn = {1176-6328},
+  doi = {10.2147/NDT.S39776},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3621648/},
+  urldate = {2022-04-18},
+  abstract = {Adolescence is the developmental epoch during which children become adults – intellectually, physically, hormonally, and socially. Adolescence is a tumultuous time, full of changes and transformations. The pubertal transition to adulthood involves both gonadal and behavioral maturation. Magnetic resonance imaging studies have discovered that myelinogenesis, required for proper insulation and efficient neurocybernetics, continues from childhood and the brain’s region-specific neurocircuitry remains structurally and functionally vulnerable to impulsive sex, food, and sleep habits. The maturation of the adolescent brain is also influenced by heredity, environment, and sex hormones (estrogen, progesterone, and testosterone), which play a crucial role in myelination. Furthermore, glutamatergic neurotransmission predominates, whereas gamma-aminobutyric acid neurotransmission remains under construction, and this might be responsible for immature and impulsive behavior and neurobehavioral excitement during adolescent life. The adolescent population is highly vulnerable to driving under the influence of alcohol and social maladjustments due to an immature limbic system and prefrontal cortex. Synaptic plasticity and the release of neurotransmitters may also be influenced by environmental neurotoxins and drugs of abuse including cigarettes, caffeine, and alcohol during adolescence. Adolescents may become involved with offensive crimes, irresponsible behavior, unprotected sex, juvenile courts, or even prison. According to a report by the Centers for Disease Control and Prevention, the major cause of death among the teenage population is due to injury and violence related to sex and substance abuse. Prenatal neglect, cigarette smoking, and alcohol consumption may also significantly impact maturation of the adolescent brain. Pharmacological interventions to regulate adolescent behavior have been attempted with limited success. Since several factors, including age, sex, disease, nutritional status, and substance abuse have a significant impact on the maturation of the adolescent brain, we have highlighted the influence of these clinically significant and socially important aspects in this report.,},
+  pmcid = {PMC3621648},
+  file = {/Users/hufengling/Zotero/storage/58BLHLRC/Arain et al. - 2013 - Maturation of the adolescent brain.pdf},
+}
+
+@Article{baumDevelopmentStructureFunction2020,
+  title = {Development of Structure–Function Coupling in Human Brain Networks during Youth},
+  author = {Graham L. Baum and Zaixu Cui and David R. Roalf and Rastko Ciric and Richard F. Betzel and Bart Larsen and Matthew Cieslak and Philip A. Cook and Cedric H. Xia and Tyler M. Moore and Kosha Ruparel and Desmond J. Oathes and Aaron F. Alexander-Bloch and Russell T. Shinohara and Armin Raznahan and Raquel E. Gur and Ruben C. Gur and Danielle S. Bassett and Theodore D. Satterthwaite},
+  date = {2020-01-07},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {PNAS},
+  volume = {117},
+  number = {1},
+  eprint = {31874926},
+  eprinttype = {pmid},
+  pages = {771--778},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1912034117},
+  url = {https://www.pnas.org/content/117/1/771},
+  urldate = {2021-12-02},
+  abstract = {The protracted development of structural and functional brain connectivity within distributed association networks coincides with improvements in higher-order cognitive processes such as executive function. However, it remains unclear how white-matter architecture develops during youth to directly support coordinated neural activity. Here, we characterize the development of structure–function coupling using diffusion-weighted imaging and n-back functional MRI data in a sample of 727 individuals (ages 8 to 23 y). We found that spatial variability in structure–function coupling aligned with cortical hierarchies of functional specialization and evolutionary expansion. Furthermore, hierarchy-dependent age effects on structure–function coupling localized to transmodal cortex in both cross-sectional data and a subset of participants with longitudinal data (n = 294). Moreover, structure–function coupling in rostrolateral prefrontal cortex was associated with executive performance and partially mediated age-related improvements in executive function. Together, these findings delineate a critical dimension of adolescent brain development, whereby the coupling between structural and functional connectivity remodels to support functional specialization and cognition.},
+  langid = {english},
+  keywords = {brain development,connectome,cortical organization,MRI,structure–function},
+  annotation = {00097},
+  file = {/Users/hufengling/Zotero/storage/CE5FELNS/Baum et al. - 2020 - Development of structure–function coupling in huma.pdf;/Users/hufengling/Zotero/storage/TJJ25977/771.html},
+}
+
+@Article{gieddBrainDevelopmentChildhood1999,
+  title = {Brain Development during Childhood and Adolescence: A Longitudinal {{MRI}} Study},
+  shorttitle = {Brain Development during Childhood and Adolescence},
+  author = {Jay N. Giedd and Jonathan Blumenthal and Neal O. Jeffries and F. X. Castellanos and Hong Liu and Alex Zijdenbos and Tom{\a'a}{\v s} Paus and Alan C. Evans and Judith L. Rapoport},
+  date = {1999-10},
+  journaltitle = {Nature Neuroscience},
+  shortjournal = {Nat Neurosci},
+  volume = {2},
+  number = {10},
+  pages = {861--863},
+  publisher = {{Nature Publishing Group}},
+  issn = {1546-1726},
+  doi = {10.1038/13158},
+  url = {https://www.nature.com/articles/nn1099_861},
+  urldate = {2022-04-18},
+  abstract = {Pediatric neuroimaging studies1,2,3,4,5, up to now exclusively cross sectional, identify linear decreases in cortical gray matter and increases in white matter across ages 4 to 20. In this large-scale longitudinal pediatric neuroimaging study, we confirmed linear increases in white matter, but demonstrated nonlinear changes in cortical gray matter, with a preadolescent increase followed by a postadolescent decrease. These changes in cortical gray matter were regionally specific, with developmental curves for the frontal and parietal lobe peaking at about age 12 and for the temporal lobe at about age 16, whereas cortical gray matter continued to increase in the occipital lobe through age 20.},
+  issue = {10},
+  langid = {english},
+  keywords = {Animal Genetics and Genomics,Behavioral Sciences,Biological Techniques,Biomedicine,general,Neurobiology,Neurosciences},
+  file = {/Users/hufengling/Zotero/storage/KGEN7I68/Giedd et al. - 1999 - Brain development during childhood and adolescence.pdf;/Users/hufengling/Zotero/storage/42XA3HA2/nn1099_861.html},
+}
+
+@Article{yurgelun-toddEmotionalCognitiveChanges2007,
+  title = {Emotional and Cognitive Changes during Adolescence},
+  author = {Deborah Yurgelun-Todd},
+  date = {2007-04-01},
+  journaltitle = {Current Opinion in Neurobiology},
+  shortjournal = {Current Opinion in Neurobiology},
+  series = {Cognitive Neuroscience},
+  volume = {17},
+  number = {2},
+  pages = {251--257},
+  issn = {0959-4388},
+  doi = {10.1016/j.conb.2007.03.009},
+  url = {https://www.sciencedirect.com/science/article/pii/S0959438807000414},
+  urldate = {2022-04-18},
+  abstract = {Adolescence is a critical period for maturation of neurobiological processes that underlie higher cognitive functions and social and emotional behavior. Recent studies have applied new advances in magnetic resonance imaging to increase understanding of the neurobiological changes that occur during the transition from childhood to early adulthood. Structural imaging data indicate progressive and regressive changes in the relative volumes of specific brain regions, although total brain volume is not significantly altered. The prefrontal cortex matures later than other regions and its development is paralleled by increased abilities in abstract reasoning, attentional shifting, response inhibition and processing speed. Changes in emotional capacity, including improvements in affective modulation and discrimination of emotional cues, are also seen during adolescence. Functional imaging studies using cognitive and affective challenges have shown that frontal cortical networks undergo developmental changes in processing. In summary, brain regions that underlie attention, reward evaluation, affective discrimination, response inhibition and goal-directed behavior undergo structural and functional re-organization throughout late childhood and early adulthood. Evidence from recent imaging studies supports a model by which the frontal cortex adopts an increasingly regulatory role. These neurobiological changes are believed to contribute, in part, to the range in cognitive and affective behavior seen during adolescence.},
+  langid = {english},
+  file = {/Users/hufengling/Zotero/storage/FAQK5VFN/S0959438807000414.html},
+}
+@Article{bercuryDynamicsMechanismsCNS2015,
+  title = {Dynamics and {{Mechanisms}} of {{CNS Myelination}}},
+  author = {Kathryn K. Bercury and Wendy B. Macklin},
+  date = {2015-02-23},
+  journaltitle = {Developmental Cell},
+  shortjournal = {Developmental Cell},
+  volume = {32},
+  number = {4},
+  eprint = {25710531},
+  eprinttype = {pmid},
+  pages = {447--458},
+  publisher = {{Elsevier}},
+  issn = {1534-5807},
+  doi = {10.1016/j.devcel.2015.01.016},
+  url = {https://www.cell.com/developmental-cell/abstract/S1534-5807(15)00059-3},
+  urldate = {2022-04-18},
+  langid = {english},
+  file = {/Users/hufengling/Zotero/storage/X3YZVENG/Bercury and Macklin - 2015 - Dynamics and Mechanisms of CNS Myelination.pdf},
+}
+@Article{satterthwaiteImpactPubertyEvolution2014,
+  title = {Impact of Puberty on the Evolution of Cerebral Perfusion during Adolescence},
+  author = {Theodore D. Satterthwaite and Russell T. Shinohara and Daniel H. Wolf and Ryan D. Hopson and Mark A. Elliott and Simon N. Vandekar and Kosha Ruparel and Monica E. Calkins and David R. Roalf and Efstathios D. Gennatas and Chad Jackson and Guray Erus and Karthik Prabhakaran and Christos Davatzikos and John A. Detre and Hakon Hakonarson and Ruben C. Gur and Raquel E. Gur},
+  date = {2014-06-10},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {Proc. Natl. Acad. Sci. U.S.A.},
+  volume = {111},
+  number = {23},
+  pages = {8643--8648},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1400178111},
+  url = {https://pnas.org/doi/full/10.1073/pnas.1400178111},
+  urldate = {2022-04-08},
+  abstract = {Significance             Blood perfusion is a fundamental property of brain physiology and is known to be higher in adult females than in males. However, it is unknown when such a sex difference emerges during the lifespan, or what biological processes may cause it. In the largest study of brain perfusion yet reported, we establish for the first time to our knowledge that patterns of development of cerebral perfusion during adolescence are markedly different in males and females, and such differences are attributable in part to the effects of puberty. These results may have important implications for neuropsychiatric disorders with adolescent onset and strong gender disparities, such as mood disorders, anxiety disorders, and schizophrenia.           ,              Puberty is the defining biological process of adolescent development, yet its effects on fundamental properties of brain physiology such as cerebral blood flow (CBF) have never been investigated. Capitalizing on a sample of 922 youths ages 8–22 y imaged using arterial spin labeled MRI as part of the Philadelphia Neurodevelopmental Cohort, we studied normative developmental differences in cerebral perfusion in males and females, as well as specific associations between puberty and CBF. Males and females had conspicuously divergent nonlinear trajectories in CBF evolution with development as modeled by penalized splines. Seventeen brain regions, including hubs of the executive and default mode networks, showed a robust nonlinear age-by-sex interaction that surpassed Bonferroni correction. Notably, within these regions the decline in CBF was similar between males and females in early puberty and only diverged in midpuberty, with CBF actually increasing in females. Taken together, these results delineate sex-specific growth curves for CBF during youth and for the first time to our knowledge link such differential patterns of development to the effects of puberty.},
+  langid = {english},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/7SQCBHFC/Satterthwaite et al. - 2014 - Impact of puberty on the evolution of cerebral per.pdf},
 }
