--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -602,3 +602,193 @@
   keywords = {age-based differences,multi-modal coupling,neurodevelopment,philadelphia neurodevelopmental cohort,sex-based differences,statistical map,subject-level},
   file = {/Users/hufengling/Zotero/storage/SP4HUB86/Vandekar et al. - 2016 - Subject-level Measurement of Local Cortical Coupli.pdf},
 }
+@Article{ballerDevelopmentalCouplingCerebral2022,
+  title = {Developmental Coupling of Cerebral Blood Flow and {{fMRI}} Fluctuations in Youth},
+  author = {Erica B. Baller and Alessandra M. Valcarcel and Azeez Adebimpe and Aaron Alexander-Bloch and Zaixu Cui and Ruben C. Gur and Raquel E. Gur and Bart L. Larsen and Kristin A. Linn and Carly M. O{\textquoteright}NADonnell and Adam R. Pines and Armin Raznahan and David R. Roalf and Valerie J. Sydnor and Tinashe M. Tapera and M. Dylan Tisdall and Simon Vandekar and Cedric H. Xia and John A. Detre and Russell T. Shinohara and Theodore D. Satterthwait},
+  date = {2022-03-29},
+  journaltitle = {Cell Reports},
+  shortjournal = {Cell Reports},
+  volume = {38},
+  number = {13},
+  eprint = {35354053},
+  eprinttype = {pmid},
+  publisher = {{Elsevier}},
+  issn = {2211-1247},
+  doi = {10.1016/j.celrep.2022.110576},
+  url = {https://www.cell.com/cell-reports/abstract/S2211-1247(22)00320-5},
+  urldate = {2022-04-08},
+  langid = {english},
+  keywords = {adolescence,amplitude of low-frequency fluctuations,cerebral blood flow,CP: Neuroscience,development,executive function,frontoparietal,neurovascular coupling,sex differences},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/KBR6CCQ8/Baller et al. - 2022 - Developmental coupling of cerebral blood flow and .pdf;/Users/hufengling/Zotero/storage/WI9EVAM9/S2211-1247(22)00320-5.html},
+}
+
+@Article{satterthwaiteImpactPubertyEvolution2014,
+  title = {Impact of Puberty on the Evolution of Cerebral Perfusion during Adolescence},
+  author = {Theodore D. Satterthwaite and Russell T. Shinohara and Daniel H. Wolf and Ryan D. Hopson and Mark A. Elliott and Simon N. Vandekar and Kosha Ruparel and Monica E. Calkins and David R. Roalf and Efstathios D. Gennatas and Chad Jackson and Guray Erus and Karthik Prabhakaran and Christos Davatzikos and John A. Detre and Hakon Hakonarson and Ruben C. Gur and Raquel E. Gur},
+  date = {2014-06-10},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {Proc. Natl. Acad. Sci. U.S.A.},
+  volume = {111},
+  number = {23},
+  pages = {8643--8648},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1400178111},
+  url = {https://pnas.org/doi/full/10.1073/pnas.1400178111},
+  urldate = {2022-04-08},
+  abstract = {Significance             Blood perfusion is a fundamental property of brain physiology and is known to be higher in adult females than in males. However, it is unknown when such a sex difference emerges during the lifespan, or what biological processes may cause it. In the largest study of brain perfusion yet reported, we establish for the first time to our knowledge that patterns of development of cerebral perfusion during adolescence are markedly different in males and females, and such differences are attributable in part to the effects of puberty. These results may have important implications for neuropsychiatric disorders with adolescent onset and strong gender disparities, such as mood disorders, anxiety disorders, and schizophrenia.           ,              Puberty is the defining biological process of adolescent development, yet its effects on fundamental properties of brain physiology such as cerebral blood flow (CBF) have never been investigated. Capitalizing on a sample of 922 youths ages 8–22 y imaged using arterial spin labeled MRI as part of the Philadelphia Neurodevelopmental Cohort, we studied normative developmental differences in cerebral perfusion in males and females, as well as specific associations between puberty and CBF. Males and females had conspicuously divergent nonlinear trajectories in CBF evolution with development as modeled by penalized splines. Seventeen brain regions, including hubs of the executive and default mode networks, showed a robust nonlinear age-by-sex interaction that surpassed Bonferroni correction. Notably, within these regions the decline in CBF was similar between males and females in early puberty and only diverged in midpuberty, with CBF actually increasing in females. Taken together, these results delineate sex-specific growth curves for CBF during youth and for the first time to our knowledge link such differential patterns of development to the effects of puberty.},
+  langid = {english},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/CYCJ2Y4N/Satterthwaite et al. - 2014 - Impact of puberty on the evolution of cerebral per.pdf},
+}
+@Article{daiContinuousFlowdrivenInversion2008,
+  title = {Continuous Flow-Driven Inversion for Arterial Spin Labeling Using Pulsed Radio Frequency and Gradient Fields},
+  author = {Weiying Dai and Dairon Garcia and Cedric {de Bazelaire} and David C. Alsop},
+  options = {useprefix=true},
+  date = {2008},
+  journaltitle = {Magnetic Resonance in Medicine},
+  volume = {60},
+  number = {6},
+  pages = {1488--1497},
+  issn = {1522-2594},
+  doi = {10.1002/mrm.21790},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1002/mrm.21790},
+  urldate = {2022-04-08},
+  abstract = {Continuous labeling by flow-driven adiabatic inversion is advantageous for arterial spin labeling (ASL) perfusion studies, but details of the implementation, including inefficiency, magnetization transfer, and limited support for continuous-mode operation on clinical scanners, have restricted the benefits of this approach. Here a new approach to continuous labeling that employs rapidly repeated gradient and radio frequency (RF) pulses to achieve continuous labeling with high efficiency is characterized. The theoretical underpinnings, numerical simulations, and in vivo implementation of this pulsed continuous ASL (PCASL) method are described. In vivo PCASL labeling efficiency of 96\% relative to continuous labeling with comparable labeling parameters far exceeded the 33\% duty cycle of the PCASL RF pulses. Imaging at 3T with body coil transmission was readily achieved. This technique should help to realize the benefits of continuous labeling in clinical imagers. Magn Reson Med 60:1488–1497, 2008. © 2008 Wiley-Liss, Inc.},
+  langid = {english},
+  keywords = {adiabatic inversion,cerebral blood flow,continuous arterial spin labeling,magnetic resonance imaging,perfusion},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/mrm.21790},
+  file = {/Users/hufengling/Zotero/storage/JXLKNLZC/Dai et al. - 2008 - Continuous flow-driven inversion for arterial spin.pdf;/Users/hufengling/Zotero/storage/G67K95IM/mrm.html},
+}
+
+@Article{herscovitchWhatCorrectValue1985,
+  title = {What Is the {{Correct Value}} for the {{Brain-Blood Partition Coefficient}} for {{Water}}?},
+  author = {Peter Herscovitch and Marcus E. Raichle},
+  date = {1985-03-01},
+  journaltitle = {Journal of Cerebral Blood Flow \& Metabolism},
+  shortjournal = {J Cereb Blood Flow Metab},
+  volume = {5},
+  number = {1},
+  pages = {65--69},
+  publisher = {{SAGE Publications Ltd STM}},
+  issn = {0271-678X},
+  doi = {10.1038/jcbfm.1985.9},
+  url = {https://doi.org/10.1038/jcbfm.1985.9},
+  urldate = {2022-04-08},
+  abstract = {A knowledge of the brain-blood partition coefficient (?) for water is usually required for the measurement of CBF with [15O]water. The currently accepted value for whole-brain ?, 0.95?0.96 ml/g, calculated from brain and blood water content data, is incorrect because in the calculation, the blood water content was not adjusted for the density of blood. The correct value is 0.90 ml/g. Variations in brain or blood water content affect ?. Thus, ? changes during development of the brain and varies regionally in it, even among different gray matter structures, owing to variation in brain water content. In addition, ? would be expected to vary with the hematocrit, owing to changes in blood water content. The impact of using an incorrect value for ? will depend on the sensitivity of the CBF measurement technique used to errors in ?.},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/Y76CMQST/Herscovitch_Raichle_1985_What_is_the_Correct_Value_for_the_Brain-Blood_Partition_Coefficient_for_Water.pdf},
+}
+
+@Article{wuVivoVenousBlood2010,
+  title = {In Vivo {{Venous Blood T1 Measurement}} Using {{Inversion Recovery TrueFISP}} in {{Children}} and {{Adults}}},
+  author = {Wen-Chau Wu and Varsha Jain and Cheng Li and Mariel Giannetta and Hallam Hurt and Felix W. Wehrli and Danny J.J. Wang},
+  date = {2010-10},
+  journaltitle = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+  shortjournal = {Magn Reson Med},
+  volume = {64},
+  number = {4},
+  eprint = {20564586},
+  eprinttype = {pmid},
+  pages = {1140--1147},
+  issn = {0740-3194},
+  doi = {10.1002/mrm.22484},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2946493/},
+  urldate = {2022-04-08},
+  abstract = {A time-efficient method is described for in-vivo venous blood T1 measurement using multi-phase inversion-recovery prepared balanced steady-state free precession imaging (IR-TrueFISP). Computer simulations and validation experiments using a flow phantom were carried out to demonstrate the accuracy of the proposed method for measuring blood T1, by taking advantage of the continuous inflow of fresh blood with longitudinal magnetization undisturbed by previous RF pulses. In vivo measurement of venous blood T1 in the sagittal sinus was carried out in 26 healthy children and adults aged 7 to 39 years. The measured venous blood T1 values decreased with age as a whole (p=0.006) and were higher in females than males (p =0.013), matching the expected developmental changes and gender differences in human hematocrit level. The estimated mean blood T1 values were highly correlated with normal hematocrit levels across age and gender groups (Spearman r=0.93, p=0.008). The longitudinal repeatability of this technique was 4.0\% as measured by the within-subject coefficient of variation. The proposed multi-phase IR-TrueFISP method is a feasible technique for fast ({$<$} 1 min) and reliable in-vivo venous blood T1 measurement, and may serve as an index of hematocrit level in individual subjects.},
+  pmcid = {PMC2946493},
+  file = {/Users/hufengling/Zotero/storage/YSFR3IPY/Wu_et_al_2010_In_vivo_Venous_Blood_T1_Measurement_using_Inversion_Recovery_TrueFISP_in.pdf},
+}
+@Article{baumDevelopmentStructureFunction2020,
+  title = {Development of Structure–Function Coupling in Human Brain Networks during Youth},
+  author = {Graham L. Baum and Zaixu Cui and David R. Roalf and Rastko Ciric and Richard F. Betzel and Bart Larsen and Matthew Cieslak and Philip A. Cook and Cedric H. Xia and Tyler M. Moore and Kosha Ruparel and Desmond J. Oathes and Aaron F. Alexander-Bloch and Russell T. Shinohara and Armin Raznahan and Raquel E. Gur and Ruben C. Gur and Danielle S. Bassett and Theodore D. Satterthwaite},
+  date = {2020-01-07},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {PNAS},
+  volume = {117},
+  number = {1},
+  eprint = {31874926},
+  eprinttype = {pmid},
+  pages = {771--778},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1912034117},
+  url = {https://www.pnas.org/content/117/1/771},
+  urldate = {2021-12-02},
+  abstract = {The protracted development of structural and functional brain connectivity within distributed association networks coincides with improvements in higher-order cognitive processes such as executive function. However, it remains unclear how white-matter architecture develops during youth to directly support coordinated neural activity. Here, we characterize the development of structure–function coupling using diffusion-weighted imaging and n-back functional MRI data in a sample of 727 individuals (ages 8 to 23 y). We found that spatial variability in structure–function coupling aligned with cortical hierarchies of functional specialization and evolutionary expansion. Furthermore, hierarchy-dependent age effects on structure–function coupling localized to transmodal cortex in both cross-sectional data and a subset of participants with longitudinal data (n = 294). Moreover, structure–function coupling in rostrolateral prefrontal cortex was associated with executive performance and partially mediated age-related improvements in executive function. Together, these findings delineate a critical dimension of adolescent brain development, whereby the coupling between structural and functional connectivity remodels to support functional specialization and cognition.},
+  langid = {english},
+  keywords = {brain development,connectome,cortical organization,MRI,structure–function},
+  annotation = {00097},
+  file = {/Users/hufengling/Zotero/storage/CE5FELNS/Baum et al. - 2020 - Development of structure–function coupling in huma.pdf;/Users/hufengling/Zotero/storage/TJJ25977/771.html},
+}
+@Article{esfahlaniLocalStructurefunctionRelationships2021,
+  title = {Local Structure-Function Relationships in Human Brain Networks across the Lifespan},
+  author = {Farnaz Zamani Esfahlani and Joshua Faskowitz and Jonah Slack and Bratislav Mi{\v s}i{\a'c} and Richard F. Betzel},
+  date = {2021-08-22},
+  pages = {2021.05.23.445128},
+  publisher = {{bioRxiv}},
+  doi = {10.1101/2021.05.23.445128},
+  url = {https://www.biorxiv.org/content/10.1101/2021.05.23.445128v2},
+  urldate = {2022-04-17},
+  abstract = {The human connectome is the set of physical pathways linking brain regions to one another. Empirical and in silico studies have demonstrated that the structure of this network helps shape patterns of functional coupling between brain regions. To better understand this link between structure and function, a growing number of studies have derived geometric, dynamic, and topological predictors from structural connectivity in order to make predictions about correlation structure. These studies, however, have typically focused on global (whole-brain) predictions using a restricted set of predictors. Here, we investigate a wide range of predictors and shift focus onto predictions of local (regional) patterns of functional coupling. We show that, globally, no individual predictor performs well and, that even the best predictors are largely driven by their ability to predict functional coupling between directly connected regions. We then use the same predictors to make predictions of local coupling and find marked improvement. Notably, the most predictable local FC is linked to sensorimotor regions, which are best predicted by measures based on topological similarity, mean first passage times of random walkers, and the brain’s embedding in Euclidean space. We then show that by combining the predictive power of more than one predictor using multi-linear models, we can further improve local predictions. Finally, we investigate how global and local structure-function coupling differences across the human lifespan. We find that, globally, the magnitude of coupling decreases with biological age, which is paralleled by an increase in the number of multi-step pathways. We also show that, locally, structure-function coupling is preserved in higher order cognitive systems, but preferentially decreases with age in sensorimotor systems. Our results illuminate the heterogeneous landscape of structure-function coupling across the cerebral cortex and help clarify its differences with age.},
+  langid = {english},
+  file = {/Users/hufengling/Zotero/storage/ZWPI64QF/Esfahlani et al. - 2021 - Local structure-function relationships in human br.pdf;/Users/hufengling/Zotero/storage/DLCKHVIK/2021.05.23.html},
+}
+@Article{vazquez-rodriguezGradientsStructureFunction2019,
+  title = {Gradients of Structure–Function Tethering across Neocortex},
+  author = {Bertha V{\a'a}zquez-Rodr{\a'\i}guez and Laura E. Su{\a'a}rez and Ross D. Markello and Golia Shafiei and Casey Paquola and Patric Hagmann and Martijn P. {van den Heuvel} and Boris C. Bernhardt and R. Nathan Spreng and Bratislav Misic},
+  options = {useprefix=true},
+  date = {2019-10-15},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  volume = {116},
+  number = {42},
+  pages = {21219--21227},
+  publisher = {{Proceedings of the National Academy of Sciences}},
+  doi = {10.1073/pnas.1903403116},
+  url = {http://www.pnas.org/doi/10.1073/pnas.1903403116},
+  urldate = {2022-04-17},
+  annotation = {00172},
+  file = {/Users/hufengling/Zotero/storage/AV45S7GI/Vázquez-Rodríguez et al. - 2019 - Gradients of structure–function tethering across n.pdf},
+}
+@Article{pretiDecouplingBrainFunction2019,
+  title = {Decoupling of Brain Function from Structure Reveals Regional Behavioral Specialization in Humans},
+  author = {Maria Giulia Preti and Dimitri {Van De Ville}},
+  date = {2019-10-18},
+  journaltitle = {Nature Communications},
+  shortjournal = {Nat Commun},
+  volume = {10},
+  number = {1},
+  pages = {4747},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-019-12765-7},
+  url = {https://www.nature.com/articles/s41467-019-12765-7},
+  urldate = {2022-04-17},
+  abstract = {The brain is an assembly of neuronal populations interconnected by structural pathways. Brain activity is expressed on and constrained by this substrate. Therefore, statistical dependencies between functional signals in directly connected areas can be expected higher. However, the degree to which brain function is bound by the underlying wiring diagram remains a complex question that has been only partially answered. Here, we introduce the structural-decoupling index to quantify the coupling strength between structure and function, and we reveal a macroscale gradient from brain regions more strongly coupled, to regions more strongly decoupled, than expected by realistic surrogate data. This gradient spans behavioral domains from lower-level sensory function to high-level cognitive ones and shows for the first time that the strength of structure-function coupling is spatially varying in line with evidence derived from other modalities, such as functional connectivity, gene expression, microstructural properties and temporal hierarchy.},
+  issue = {1},
+  langid = {english},
+  keywords = {Cognitive neuroscience,Information technology,Network models},
+  annotation = {00000},
+  file = {/Users/hufengling/Zotero/storage/24VTBVNM/Preti and Van De Ville - 2019 - Decoupling of brain function from structure reveal.pdf;/Users/hufengling/Zotero/storage/VKF4FZC4/s41467-019-12765-7.html},
+}
+@Article{wangEmpiricalOptimizationASL2008,
+  title = {Empirical Optimization of {{ASL}} Data Analysis Using an {{ASL}} Data Processing Toolbox: {{ASLtbx}}},
+  shorttitle = {Empirical Optimization of {{ASL}} Data Analysis Using an {{ASL}} Data Processing Toolbox},
+  author = {Ze Wang and Geoffrey K. Aguirre and Hengyi Rao and Jiongjiong Wang and Mar{\a'\i}a A. Fern{\a'a}ndez-Seara and Anna R. Childress and John A. Detre},
+  date = {2008-02},
+  journaltitle = {Magnetic Resonance Imaging},
+  shortjournal = {Magn Reson Imaging},
+  volume = {26},
+  number = {2},
+  eprint = {17826940},
+  eprinttype = {pmid},
+  pages = {261--269},
+  issn = {0730-725X},
+  doi = {10.1016/j.mri.2007.07.003},
+  abstract = {Arterial spin labeling (ASL) perfusion fMRI data differ in important respects from the more familiar blood oxygen level-dependent (BOLD) fMRI data and require specific processing strategies. In this paper, we examined several factors that may influence ASL data analysis, including data storage bit resolution, motion correction, preprocessing for cerebral blood flow (CBF) calculations and nuisance covariate modeling. Continuous ASL data were collected at 3 T from 10 subjects while they performed a simple sensorimotor task with an epoch length of 48 s. These data were then analyzed using systematic variations of the factors listed above to identify the approach that yielded optimal signal detection for task activation. Improvements in statistical power were found for use of at least 10 bits for data storage at 3 T. No significant difference was found in motor cortex regarding using simple subtraction or sinc subtraction, but the former presented minor but significantly (P{$<$}.024) larger peak t value in visual cortex. While artifactual head motion patterns were observed in synthetic data and background-suppressed ASL data when label/control images were realigned to a common target, independent realignment of label and control images did not yield significant improvements in activation in the sensorimotor data. It was also found that CBF calculations should be performed prior to spatial normalization and that modeling of global fluctuations yielded significantly increased peak t value in motor cortex. The implementation of all ASL data processing approaches is easily accomplished within an open-source toolbox, ASLtbx, and is advocated for most perfusion fMRI data sets.},
+  langid = {english},
+  pmcid = {PMC2268990},
+  keywords = {Analysis of Variance,Artifacts,ASL data processing,ASL perfusion MRI,Cerebrovascular Circulation,Female,fMRI,Head Movements,Humans,Image Processing; Computer-Assisted,Magnetic Resonance Imaging,Male,Regression Analysis,Spin Labels,Subtraction Technique},
+  annotation = {00416},
+  file = {/Users/hufengling/Zotero/storage/PEGVFTW6/Wang et al. - 2008 - Empirical optimization of ASL data analysis using .pdf;/Users/hufengling/Zotero/storage/4V2TJJNE/S0730725X07003517.html},
+}
